se agrega base de datos

--- a/timbox/src/main/resources/application.properties
+++ b/timbox/src/main/resources/application.properties
@@ -16,13 +16,13 @@ spring.datasource.sql-script-encoding=UTF-8
 
 
 #produccion
-#spring.datasource.url=jdbc:mysql://bc8752a8963b7e:0a98dd76@us-cdbr-iron-east-05.cleardb.net/heroku_6cada2d863d4407?reconnect=true
-#spring.datasource.username=bc8752a8963b7e
-#spring.datasource.password=0a98dd76
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://bb598b5a8704c4:79c80a09@us-cdbr-east-02.cleardb.com/heroku_52412d4440555e0?reconnect=true
+spring.datasource.username=bb598b5a8704c4
+spring.datasource.password=79c80a09
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #desarrollo
-spring.datasource.url=jdbc:mysql://localhost:3306/examen?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/examen?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
